package br.edu.ifs.designpatterns.decorator;

public interface Component {

	public double custo();
	public Object getDescricao();

}